--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+#homepage{
+    width: 40%;
+     margin: 30px auto;
+    
+   
+}
+#nuvbar{
+    width: 75%;
+    margin: 30px auto;
+    text-align: right;
+}
+
+
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
