--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,4 +1,4 @@
-<body id="nuvbar">
+<body class="nuvbar">
     <ul class="nav nav-pills nav-justified ">
         <li class="nav-item">
             <div class="flex-sm-fill text-sm-center nav-link " aria-current="page" [routerLink]='["/register"]'
