--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -20,17 +20,10 @@
                 <input type="text" #name_of_carpentry class="form-control">
             </div>
             <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">כתובת רחוב </label>
-                <input type="text" #street class="form-control">
+                <label for="exampleInputPassword1" class="form-label"> כתובת מלאה </label>
+                <input type="text" #adress class="form-control">
             </div>
-            <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">מספר בית </label>
-                <input type="text" #num class="form-control">
-            </div>
-            <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">עיר </label>
-                <input type="text" #city class="form-control">
-            </div>
+           
             <div class="mb-3">
                 <label for="exampleInputPassword1" class="form-label">טלפון </label>
                 <input type="text" #fon class="form-control">
@@ -40,7 +33,7 @@
         </form>
 
         <div>
-            <button type="submit" class="btn btn-primary" (click)='submit(email,password,password2,name_of_carpentry,street,num,city,fon)'>
+            <button type="submit" class="btn btn-primary" (click)='submit(email,password,password2,name_of_carpentry,adress,fon)'>
                 שלח
             </button>
 
