--- a/src/app/components/carpentry-list/carpentry-list.component.html
+++ b/src/app/components/carpentry-list/carpentry-list.component.html
@@ -1,15 +1,23 @@
-<div *ngFor='let type of type_tree_list  let i=index' >
-    <h1>{{carpentry_shop_name_list[i]}}</h1>
-    <ol *ngFor='let tt of type_tree_list[i]' class="list-group list-group-numbered">
-        <li class="list-group-item d-flex justify-content-between align-items-start">
-            <div class="ms-2 me-auto">
-                <div class="fw-bold">סוג הקרש: {{tt.name_of_Wooden_beam}}</div>
-                אורך: {{tt.length}}
-                מחיר: {{tt.price}}
-                תיאור: {{tt.description}}
+<div *ngFor='let obj of shop_and_woodens_objects_list '>
+
+    <div class="card text-center">
+
+        <div class="card-body">
+            <h5 class="card-title">{{obj.carpentry_shop_name}}</h5>
+            <p class="card-text"> {{obj.adress}}</p>
+            <button class="btn btn-primary" (click)="obj.selected? obj.selected = false : obj.selected = true;">
+                הרחב
+            </button>
+            <div *ngIf="obj.selected">
+                <div *ngFor="let wood of obj.types_of_woodens">
+                    <div>{{wood.name_of_Wooden_beam}}</div>
+                    <div>{{wood.description}}</div>
+                    <div *ngFor="let lengthes of wood.price_and_existing_lengthes">
+                        <div> {{lengthes.length}}</div>
+                        <div>{{lengthes.price}}</div>
+                    </div>
+                </div>
             </div>
-            <span class="badge bg-primary rounded-pill">14</span>
-        </li>
-        
-    </ol>
+        </div>
+    </div>
 </div>
