i degine my web

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -40,5 +40,5 @@
 </div>
 
 <div *ngIf='login_status==3'>
-    <app-yourCarpentry [list_carpentry]='list_carpentry' (add_to_list)='add_to_list($event)'></app-yourCarpentry>
+    <app-yourCarpentry [typesWoodens]='typesWoodens' (add_to_list)='add_to_list($event)'></app-yourCarpentry>
 </div>
