--- a/src/app/components/carpentry-list/carpentry-list.component.html
+++ b/src/app/components/carpentry-list/carpentry-list.component.html
@@ -6,7 +6,7 @@
             <h5 class="card-title">{{obj.carpentry_shop_name}}</h5>
             <p class="card-text"> {{obj.adress}}</p>
             <button class="btn btn-primary" (click)="obj.selected? obj.selected = false : obj.selected = true;">
-                הרחב
+                הצג רשימת הקרשים
             </button>
             <div *ngIf="obj.selected">
                 <div *ngFor="let wood of obj.types_of_woodens">
