--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,3 +1,4 @@
+
 <body class="nuvbar">
     <ul class="nav nav-pills nav-justified ">
         <li class="nav-item">
@@ -15,10 +16,12 @@
                 לרשומים</div>
         </li>
         <li class="nav-item">
-            <div class="flex-sm-fill text-sm-center nav-link " aria-current="page"
-                [routerLink]='["/carpentry-list"]' [ngClass]="{'active':clicked[3]}" (click)="click(3)">רשימת נגריות
+            <div class="flex-sm-fill text-sm-center nav-link " aria-current="page" [routerLink]='["/carpentry-list"]'
+                [ngClass]="{'active':clicked[3]}" (click)="click(3)">רשימת נגריות
             </div>
         </li>
     </ul>
-    <router-outlet></router-outlet>
+  
+        <router-outlet></router-outlet>
+    
 </body>
