--- a/src/app/components/carpentry-list/carpentry-list.component.html
+++ b/src/app/components/carpentry-list/carpentry-list.component.html
@@ -28,7 +28,7 @@
                                 </div>
 
                             </fieldset>
-                            <button (click)=" pass_to_cutting_component(obj.wood);" class="btn btn-success">בחר</button>
+                            <button (click)=" pass_to_cutting_component(wood);" class="btn btn-success">בחר</button>
                         </div>
                     </li>
 
@@ -39,5 +39,5 @@
     </div>
 </div>
 <div *ngIf="keep_to_cutting_component">
-        <app-cutting-list [types_of_woodens]=></app-cutting-list>>
+        <app-cutting-list [types_of_woodens]=the_selected_wooden_for_caculate></app-cutting-list>
 </div>
